--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!-- light box photo gallery -->
+    <link rel="stylesheet" href="assets/css/lightbox.min.css" />
 
     <!-- slick slide css -->
     <!-- Add the slick-theme.css if you want default styling -->
