--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5 mb-3">
+                <div class="col-md-5 res_col_5 mb-3">
                     <div class=" background-res d-flex justify-content-center align-items-center organic_img_1 "
                         style="background-image: url('./assets/img/home-1/grocerry.jpg');">
                         <div class="ogranicText2 text-center">
@@ -523,9 +523,9 @@
             <h2 class="py-4"><span class="ftColor">Exclusive</span> Product</h2>
             <div class="planLine_2 mb-4"></div>
             <div class="row">
-                <div class="col-md-9">
+                <div class="col-md-9 res_col_9">
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-3 res_col_3">
                             <div class="featured_col border text-center mb-4">
                                 <div class="exclusive_img">
                                     <img src="assets/img/home-1/chips3.jpg" alt="" srcset="">
@@ -553,7 +553,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 res_col_3">
                             <div class="featured_col border text-center mb-4">
                                 <div class="exclusive_img">
                                     <img src="assets/img/home-1/chips2.jpg" alt="" srcset="">
@@ -581,7 +581,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 res_col_3">
                             <div class="featured_col border text-center mb-4">
                                 <div class="exclusive_img">
                                     <img src="assets/img/home-1/chips.jpg" alt="" srcset="">
@@ -609,7 +609,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 res_col_3">
                             <div class="featured_col border text-center mb-4">
                                 <div class="exclusive_img">
                                     <img src="assets/img/home-1/chips4.jpg" alt="" srcset="">
@@ -637,7 +637,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 res_col_3">
                             <div class="featured_col border text-center mb-4">
                                 <div class="exclusive_img">
                                     <img src="assets/img/home-1/chips.jpg" alt="" srcset="">
@@ -665,7 +665,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 res_col_3">
                             <div class="featured_col border text-center mb-4">
                                 <div class="exclusive_img">
                                     <img src="assets/img/home-1/chips2.jpg" alt="" srcset="">
@@ -693,7 +693,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 res_col_3">
                             <div class="featured_col border text-center mb-4">
                                 <div class="exclusive_img">
                                     <img src="assets/img/home-1/chips3.jpg" alt="" srcset="">
@@ -721,7 +721,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 res_col_3">
                             <div class="featured_col border text-center mb-4">
                                 <div class="exclusive_img">
                                     <img src="assets/img/home-1/chips4.jpg" alt="" srcset="">
@@ -751,7 +751,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 res_d_none">
+                <div class="col-md-3 res_col_3 res_d_none">
                     <div class=" background-res d-flex justify-content-center align-items-center organicHoney_img_1 mb-4"
                         style="background-image: url('./assets/img/home-1/honey2.jpg');">
                     </div>
@@ -939,7 +939,7 @@
             <h2 class="py-4"><span class="ftColor">Recently</span> Landed</h2>
             <div class="planLine_2 mb-4"></div>
             <div class="row">
-                <div class="col-md-3 res_col_3">
+                <div class="col-md-3 res_col_3_recent">
                     <div class=" background-res d-flex justify-content-center align-items-center landed_img_1"
                         style="background-image: url('./assets/img/home-1/badakopi2.jpg');">
                         <div class="landed_content text-center text-white p-2">
@@ -951,9 +951,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 res_col_9">
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-3 res_col_3">
                             <div class="featured_col border text-center mb-4">
                                 <div class="exclusive_img">
                                     <img src="assets/img/home-1/chips3.jpg" alt="" srcset="">
@@ -981,7 +981,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 res_col_3">
                             <div class="featured_col border text-center mb-4">
                                 <div class="exclusive_img">
                                     <img src="assets/img/home-1/chips2.jpg" alt="" srcset="">
@@ -1009,7 +1009,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 res_col_3">
                             <div class="featured_col border text-center mb-4">
                                 <div class="exclusive_img">
                                     <img src="assets/img/home-1/chips.jpg" alt="" srcset="">
@@ -1037,7 +1037,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 res_col_3">
                             <div class="featured_col border text-center mb-4">
                                 <div class="exclusive_img">
                                     <img src="assets/img/home-1/chips4.jpg" alt="" srcset="">
@@ -1128,7 +1128,7 @@
             <h2 class="py-4"><span class="ftColor">Recent</span> Article</h2>
             <div class="planLine_2 mb-4"></div>
             <div class="row mt-4">
-                <div class="col-md-3 mb-3">
+                <div class="col-md-3 res_col_3 mb-3">
                     <div class="homeArticle">
                         <img src="assets/img/home-1/1.jpg" alt="">
                         <p>By : David Nov 07 2022</p>
@@ -1136,7 +1136,7 @@
                         <h5><a href="">Read More</a></h5>
                     </div>
                 </div>
-                <div class="col-md-3 mb-3">
+                <div class="col-md-3 res_col_3 mb-3">
                     <div class="homeArticle">
                         <img src="assets/img/home-1/1.jpg" alt="">
                         <p>By : David Nov 07 2022</p>
@@ -1144,7 +1144,7 @@
                         <h5><a href="">Read More</a></h5>
                     </div>
                 </div>
-                <div class="col-md-3 mb-3">
+                <div class="col-md-3 res_col_3 mb-3">
                     <div class="homeArticle">
                         <img src="assets/img/home-1/1.jpg" alt="">
                         <p>By : David Nov 07 2022</p>
@@ -1152,7 +1152,7 @@
                         <h5><a href="">Read More</a></h5>
                     </div>
                 </div>
-                <div class="col-md-3 mb-3">
+                <div class="col-md-3 res_col_3 mb-3">
                     <div class="homeArticle">
                         <img src="assets/img/home-1/1.jpg" alt="">
                         <p>By : David Nov 07 2022</p>
@@ -1238,7 +1238,7 @@
             </div>
             <div class="col-md-6 res_col_6">
                 <div class="row">
-                    <div class="col-md-5 res_col_5">
+                    <div class="col-md-5 res_col_5_2">
                         <div class="contact_info">
                             <h5>Contacts Us</h5>
                             <h6><a href="#">Location</a></h6>
