--- a/FAQ.html
+++ b/FAQ.html
@@ -34,17 +34,101 @@
     />
 
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
+
     <title>FAQ</title>
   </head>
 
   <body>
-    <section id="Contact_us" class="py-5">
+
+    <header class="bg_color">
+
+      <div class="container">
+          <div class="row">
+              <nav class="navbar navbar-expand-lg navbar-light ">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                      aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="col-md-2 category_bg">
+                      <a class="navbar-brand text-white cat_font" href="#">SHOP BY CATEGORY</a>
+                      <span><i class="fa-solid fa-bars text-white"></i></span>
+                  </div>
+                  <div class="col-md-8">
+                      <div class="collapse navbar-collapse menu" id="navbarNavDropdown">
+                          <ul class="navbar-nav  ">
+                              <li class="nav-item ">
+                                  <a class="nav-link active text-white" aria-current="page" href="#">HOME</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link text-white" href="#">ABOUT</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link text-white" href="#">PRODUCTS</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link text-white" href="#">FRESH</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link text-white" href="#">FROZEN</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link text-white" href="#">SHOP</a>
+                              </li>
+                              <li class="nav-item dropdown">
+                                  <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button"
+                                      data-bs-toggle="dropdown" aria-expanded="false">
+                                      PAGE
+                                  </a>
+                                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                      <li><a class="dropdown-item" href="#">Action</a></li>
+                                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                  </ul>
+                              </li>
+                              <li class="nav-item dropdown">
+                                  <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button"
+                                      data-bs-toggle="dropdown" aria-expanded="false">
+                                      BLOG
+                                  </a>
+                                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                      <li><a class="dropdown-item" href="#">Blog</a></li>
+                                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                  </ul>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link text-white" href="#">MEGAMENU</a>
+                              </li>
+                              <li class="nav-item offer_icon">
+                                  <a class="nav-link text-white" href="#"><i class="fa-brands fa-buffer"></i></a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link text-white " href="#">Best_Offer</a>
+                              </li>
+                          </ul>
+                      </div>
+                  </div>
+                  <div class="col-md-2">
+                      <div class="profile">
+                          <span>| </span>
+                          <i class="fa-solid fa-user"></i>
+                          <span>My Account</span>
+                      </div>
+                  </div>
+              </nav>
+          </div>
+      </div>
+  </header>
+
+
+    <section id="Contact_us" class="mt-5">
       <div class="container">
         <div class="container2">
           <div class="row">
             <div class="col-md-6">
               <div class="contact_img">
-                <!-- <img src="assets/img/Capture2.PNG" alt="" srcset=""> -->
                 <a
                   href="assets/img/FAQ/1.PNG"
                   data-lightbox="mygallery"
@@ -175,10 +259,11 @@
       </div>
     </section>
 
-    <section id="About_Shipping_System" class="py-5 mb-5">
+    
+    <section id="About_Shipping_System" class="py-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-3 res_col_3_768 mb-3">
             <div class="about_freeShipping">
               <div class="about_freeShipping_content d-flex">
                 <i class="fa-solid fa-headset"></i>
@@ -189,7 +274,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 res_col_3_768 mb-3">
             <div class="about_freeShipping">
               <div class="about_freeShipping_content d-flex">
                 <i class="fa-solid fa-headset"></i>
@@ -200,7 +285,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 res_col_3_768 mb-3">
             <div class="about_freeShipping">
               <div class="about_freeShipping_content d-flex">
                 <i class="fa-solid fa-headset"></i>
@@ -211,7 +296,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 res_col_3_768 mb-3">
             <div class="about_freeShipping">
               <div class="about_freeShipping_content d-flex">
                 <i class="fa-solid fa-headset"></i>
@@ -226,12 +311,11 @@
       </div>
     </section>
 
-    <!-- ---------------------------------- -->
     <section id="Contact_cta" class="mb-5">
       <div class="container">
-        <div class="row">
+        <div class="row py-4">
           <div class="col-md-6">
-            <div class="cta_contact_text py-5">
+            <div class="cta_contact_text">
               <h3>
                 Subscribe And Get Free
                 <span class="text-warning">30%</span> Discount For All Products
@@ -239,8 +323,8 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="contact_cta_btn py-5">
-              <form class="d-flex">
+            <div class="contact_cta_btn">
+              <form class="contact_cta_D_flex">
                 <input
                   class="me-2 search_field"
                   type="search"
@@ -260,29 +344,35 @@
       </div>
     </section>
 
+    <!-- -------------------------------------------- -->
+
     <section id="Contact" class="py-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
-            <div class="contact_logo">
-              <img src="assets/img/logo/Capture-removebg-preview.png" alt="" />
-              <p class="text-muted">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore
-                ducimus dolor hic nostrum odit, odio corrupti um dolor sit amet
-                consectetur, adipisicing elit.
-              </p>
-              <h5>Follow Us</h5>
-              <div class="contact_icon">
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+          <div class="col-md-6 res_col_6">
+            <div class="row mb-5">
+              <div class="col-md-6">
+                <div class="contact_logo">
+                  <img
+                    src="assets/img/logo/Capture-removebg-preview.png"
+                    alt=""
+                  />
+                  <p class="text-muted">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Dolore ducimus dolor hic nostrum odit, odio corrupti um
+                    dolor sit amet consectetur, adipisicing elit.
+                  </p>
+                  <h5>Follow Us</h5>
+                  <div class="contact_icon">
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="row">
-              <div class="col-md-4">
+
+              <div class="col-md-3 res_col_3_2">
                 <div class="contact_info">
                   <h5>Information</h5>
                   <p><a href="#">About Us</a></p>
@@ -295,7 +385,7 @@
                 </div>
               </div>
 
-              <div class="col-md-4">
+              <div class="col-md-3 res_col_3_2">
                 <div class="contact_info">
                   <h5>Category</h5>
                   <p><a href="#">Backery & Pastry</a></p>
@@ -307,8 +397,11 @@
                   <p><a href="#">Snacks items</a></p>
                 </div>
               </div>
-
-              <div class="col-md-4">
+            </div>
+          </div>
+          <div class="col-md-6 res_col_6">
+            <div class="row">
+              <div class="col-md-5 res_col_5_2">
                 <div class="contact_info">
                   <h5>Contacts Us</h5>
                   <h6><a href="#">Location</a></h6>
@@ -327,78 +420,78 @@
                   </a>
                 </div>
               </div>
-            </div>
-          </div>
 
-          <div class="col-md-3">
-            <div class="contact_info">
-              <h5>Instagram</h5>
-              <p><a href="#">Follow Our Instagram Page</a></p>
-              <div class="row">
-                <div class="col-md-4 insta_pic text-center">
-                  <div class="contact_insta_img">
-                    <a
-                      href="assets/img/footer/faluda2.jpg"
-                      data-lightbox="mygallery"
-                      data-title="Caption-1"
-                    >
-                      <img src="assets/img/footer/faluda2.jpg" alt=""
-                    /></a>
-                  </div>
-                </div>
-                <div class="col-md-4 insta_pic text-center">
-                  <div class="contact_insta_img">
-                    <a
-                      href="assets/img/footer/dragon3.jpg"
-                      data-lightbox="mygallery"
-                      data-title="Caption-2"
-                    >
-                      <img src="assets/img/footer/dragon3.jpg" alt=""
-                    /></a>
-                  </div>
-                </div>
-                <div class="col-md-4 insta_pic text-center">
-                  <div class="contact_insta_img">
-                    <a
-                      href="assets/img/footer/pizza2.jpg"
-                      data-lightbox="mygallery"
-                      data-title="Caption-3"
-                    >
-                      <img src="assets/img/footer/pizza2.jpg" alt=""
-                    /></a>
-                  </div>
-                </div>
-                <div class="col-md-4 insta_pic text-center">
-                  <div class="contact_insta_img">
-                    <a
-                      href="assets/img/footer/biscute.png"
-                      data-lightbox="mygallery"
-                      data-title="Caption-4"
-                    >
-                      <img src="assets/img/footer/biscute.png" alt=""
-                    /></a>
-                  </div>
-                </div>
-                <div class="col-md-4 insta_pic text-center">
-                  <div class="contact_insta_img">
-                    <a
-                      href="assets/img/footer/strawberry.jpg"
-                      data-lightbox="mygallery"
-                      data-title="Caption-5"
-                    >
-                      <img src="assets/img/footer/strawberry.jpg" alt=""
-                    /></a>
-                  </div>
-                </div>
-                <div class="col-md-4 insta_pic text-center">
-                  <div class="contact_insta_img">
-                    <a
-                      href="assets/img/footer/fruits1.jpg"
-                      data-lightbox="mygallery"
-                      data-title="Caption-6"
-                    >
-                      <img src="assets/img/footer/fruits1.jpg" alt=""
-                    /></a>
+              <div class="col-md-7 res_col_7">
+                <div class="contact_info">
+                  <h5>Instagram</h5>
+                  <p><a href="#">Follow Our Instagram Page</a></p>
+                  <div class="row">  
+                    <div class="col-md-4 insta_pic text-center">
+                      <div class="contact_insta_img">
+                        <a
+                          href="assets/img/footer/faluda2.jpg"
+                          data-lightbox="mygallery"
+                          data-title="Caption-1"
+                        >
+                          <img src="assets/img/footer/faluda2.jpg" alt=""
+                        /></a>
+                      </div>
+                    </div>
+                    <div class="col-md-4 insta_pic text-center">
+                      <div class="contact_insta_img">
+                        <a
+                          href="assets/img/footer/dragon3.jpg"
+                          data-lightbox="mygallery"
+                          data-title="Caption-2"
+                        >
+                          <img src="assets/img/footer/dragon3.jpg" alt=""
+                        /></a>
+                      </div>
+                    </div>
+                    <div class="col-md-4 insta_pic text-center">
+                      <div class="contact_insta_img">
+                        <a
+                          href="assets/img/footer/pizza2.jpg"
+                          data-lightbox="mygallery"
+                          data-title="Caption-3"
+                        >
+                          <img src="assets/img/footer/pizza2.jpg" alt=""
+                        /></a>
+                      </div>
+                    </div>
+                    <div class="col-md-4 insta_pic text-center">
+                      <div class="contact_insta_img">
+                        <a
+                          href="assets/img/footer/biscute.png"
+                          data-lightbox="mygallery"
+                          data-title="Caption-4"
+                        >
+                          <img src="assets/img/footer/biscute.png" alt=""
+                        /></a>
+                      </div>
+                    </div>
+                    <div class="col-md-4 insta_pic text-center">
+                      <div class="contact_insta_img">
+                        <a
+                          href="assets/img/footer/strawberry.jpg"
+                          data-lightbox="mygallery"
+                          data-title="Caption-5"
+                        >
+                          <img src="assets/img/footer/strawberry.jpg" alt=""
+                        /></a>
+                      </div>
+                    </div>
+                    <div class="col-md-4 insta_pic text-center">
+                      <div class="contact_insta_img">
+                        <a
+                          href="assets/img/footer/fruits1.jpg"
+                          data-lightbox="mygallery"
+                          data-title="Caption-6"
+                        >
+                          <img src="assets/img/footer/fruits1.jpg" alt=""
+                        /></a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -417,19 +510,32 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="payment text-center">
-                <a href=""
-                  ><img src="assets/img/payments/1.jpg" alt="" srcset=""
-                /></a>
-                <a href=""
-                  ><img src="assets/img/payments/2.jpg" alt="" srcset=""
-                /></a>
-                <a href=""
-                  ><img src="assets/img/payments/3.jpg" alt="" srcset=""
-                /></a>
-                <a href=""
-                  ><img src="assets/img/payments/4.jpg" alt="" srcset=""
-                /></a>
+              <div class="row">
+                <div class="col_5 payment">
+                  <a href=""
+                    ><img src="assets/img/payments/1.jpg" alt="" srcset=""
+                  /></a>
+                </div>
+                <div class="col_5 payment">
+                  <a href=""
+                    ><img src="assets/img/payments/2.jpg" alt="" srcset=""
+                  /></a>
+                </div>
+                <div class="col_5 payment">
+                  <a href=""
+                    ><img src="assets/img/payments/3.jpg" alt="" srcset=""
+                  /></a>
+                </div>
+                <div class="col_5 payment">
+                  <a href=""
+                    ><img src="assets/img/payments/5.jpg" alt="" srcset=""
+                  /></a>
+                </div>
+                <div class="col_5 payment">
+                  <a href=""
+                    ><img src="assets/img/payments/6.png" alt="" srcset=""
+                  /></a>
+                </div>
               </div>
             </div>
             <div class="col-md-4">
@@ -441,6 +547,8 @@
         </div>
       </div>
     </footer>
+
+  
 
     <!-- jquery light box cdn -->
     <script src="assets/js/lightbox-plus-jquery.min.js"></script>
@@ -458,5 +566,10 @@
     ></script>
     <!-- slick slide cdn -->
     <script src="./assets/js/main.js"></script>
+    
+    <!-- ------- -->
+    <div>
+      <!-- ------ -->
+
   </body>
 </html>
