--- a/FAQ.html
+++ b/FAQ.html
@@ -42,88 +42,93 @@
   <body>
 
     <header class="bg_color">
-
-      <div class="container">
-          <div class="row">
-              <nav class="navbar navbar-expand-lg navbar-light ">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                      aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="col-md-2 category_bg">
-                      <a class="navbar-brand text-white cat_font" href="#">SHOP BY CATEGORY</a>
-                      <span><i class="fa-solid fa-bars text-white"></i></span>
-                  </div>
-                  <div class="col-md-8">
-                      <div class="collapse navbar-collapse menu" id="navbarNavDropdown">
-                          <ul class="navbar-nav  ">
-                              <li class="nav-item ">
-                                  <a class="nav-link active text-white" aria-current="page" href="#">HOME</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link text-white" href="#">ABOUT</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link text-white" href="#">PRODUCTS</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link text-white" href="#">FRESH</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link text-white" href="#">FROZEN</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link text-white" href="#">SHOP</a>
-                              </li>
-                              <li class="nav-item dropdown">
-                                  <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button"
-                                      data-bs-toggle="dropdown" aria-expanded="false">
-                                      PAGE
-                                  </a>
-                                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                      <li><a class="dropdown-item" href="#">Action</a></li>
-                                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                  </ul>
-                              </li>
-                              <li class="nav-item dropdown">
-                                  <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button"
-                                      data-bs-toggle="dropdown" aria-expanded="false">
-                                      BLOG
-                                  </a>
-                                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                      <li><a class="dropdown-item" href="#">Blog</a></li>
-                                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                  </ul>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link text-white" href="#">MEGAMENU</a>
-                              </li>
-                              <li class="nav-item offer_icon">
-                                  <a class="nav-link text-white" href="#"><i class="fa-brands fa-buffer"></i></a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link text-white " href="#">Best_Offer</a>
-                              </li>
+      <section id="Menu" class="">
+        <nav class="navbar navbar-expand-lg navbar-light bg_color">
+            <div class="container">
+                <div class="logo">
+                  <a class="navbar-brand text-white cat_font res_large_device" href="#">SHOP BY CATEGORY
+                    <span> <i class="fa-solid fa-bars text-white ms-2"></i></span></a>
+                  <div class="profile navbar-brand text-white res_small_device" >
+                    <a href="" class="text-white"> <i class="fa-solid fa-user"></i>
+                    <span>My Account</span></a>
+                </div>
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse menu " id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link actived text-white" aria-current="page" href="index.html">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="about_us.html">ABOUT</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle text-white" href="product_details.html" id="navbarDropdownMenuLink" role="button"
+                              data-bs-toggle="dropdown" aria-expanded="false">
+                              PRODUCTS
+                          </a>
+                          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                              <li><a class="dropdown-item" href="product_details.html">Product Details</a></li>
+                              <li><a class="dropdown-item" href="#">Page 2</a></li>
+                              <li><a class="dropdown-item" href="#">Page 3</a></li>
                           </ul>
-                      </div>
-                  </div>
-                  <div class="col-md-2">
-                      <div class="profile">
-                          <span>| </span>
-                          <i class="fa-solid fa-user"></i>
-                          <span>My Account</span>
-                      </div>
-                  </div>
-              </nav>
-          </div>
-      </div>
+                      </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="FAQ.html">FRESH</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="wishList.html">FROZEN</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="shoppingCart.html">SHOP</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                PAGE
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="#">Page 1</a></li>
+                                <li><a class="dropdown-item" href="#">Page 2</a></li>
+                                <li><a class="dropdown-item" href="#">Page 3</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white" href="blog.html" id="navbarDropdownMenuLink" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                BLOG
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="blog.html">Blog </a></li>
+                                <li><a class="dropdown-item" href="blog-details.html">Blog Details</a></li>
+                                <li><a class="dropdown-item" href="#">Blog 3</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">MEGAMENU</a>
+                        </li>
+                    </ul>
+                   
+                </div>
+                 <!-- --------------------- -->
+                 <div class="profile res_large_device">
+                  <a class="text-white overflow_1199" href="#"><i class="fa-brands fa-buffer me-2"></i><span>Best Offer</span></a>
+                 <a href="" class="text-white"><span class="ms-2"> | </span>
+                  <i class="fa-solid fa-user ms-2"></i>
+                  <span>My Account</span></a> 
+                </div>
+              <!-- ---------------------- -->
+            </div>
+        </nav>
+    </section>
   </header>
 
 
-    <section id="Contact_us" class="mt-5">
+    <section id="Contact_us" class="paddingTop">
       <div class="container">
         <div class="container2">
           <div class="row">
@@ -259,6 +264,7 @@
       </div>
     </section>
 
+    <!-- -------------------------------------------- -->
     
     <section id="About_Shipping_System" class="py-5">
       <div class="container">
