--- a/FAQ.html
+++ b/FAQ.html
@@ -177,90 +177,82 @@
           <h2 class="text-center">Popular Question For You</h2>
           <div class="faqShopping mt-4">
             <h4 class="py-4">Shopping Info</h4>
-            <select
-              class="form-select form-select-lg mb-4 select_qestion"
-              aria-label=".form-select-lg example"
-            >
-              <option selected>
-                Q: Where Is Standard Shopping Available ?
-              </option>
-              <option value="1">One</option>
-            </select>
-            <select
-              class="form-select form-select-lg mb-4 select_qestion"
-              aria-label=".form-select-lg example"
-            >
-              <option selected>Q: Can I Change My Shopping Address ?</option>
-              <option value="1">One</option>
-            </select>
-            <select
-              class="form-select form-select-lg mb-4 select_qestion"
-              aria-label=".form-select-lg example"
-            >
-              <option selected>Q: When Is Your Shopping Cart Off Time?</option>
-              <option value="1">One</option>
-            </select>
-            <select
-              class="form-select form-select-lg mb-4 select_qestion"
-              aria-label=".form-select-lg example"
-            >
-              <option selected>Q: When Is Your Shopping Cart Off Time?</option>
-              <option value="1">One</option>
-            </select>
+                <button class="faqShopping_accordion"> Q: Where Is Standard Shopping Available ?</button>
+                <div class="faqShopping_panel">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+
+                <button class="faqShopping_accordion">Q: Can I Change My Shopping Address ?</button>
+                <div class="faqShopping_panel">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+
+                <button class="faqShopping_accordion">Q: When Is Your Shopping Cart Off Time?</button>
+                <div class="faqShopping_panel">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+
+                <button class="faqShopping_accordion">Q: When Is Your Shopping Cart Off Time?</button>
+                <div class="faqShopping_panel">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+
+               
           </div>
           <div class="faqShopping mt-4">
             <h4 class="py-4">Order & Delevary</h4>
-            <select
-              class="form-select form-select-lg mb-4 select_qestion"
-              aria-label=".form-select-lg example"
-            >
-              <option selected>Q: When Will My Credit Cart Big Change ?</option>
-              <option value="1">One</option>
-            </select>
-            <select
-              class="form-select form-select-lg mb-4 select_qestion"
-              aria-label=".form-select-lg example"
-            >
-              <option selected>
-                Q: When Can I Do If I Have An Issu With My Order ?
-              </option>
-              <option value="1">One</option>
-            </select>
-            <select
-              class="form-select form-select-lg mb-4 select_qestion"
-              aria-label=".form-select-lg example"
-            >
-              <option selected>Q: What Payment Method Do You Accept?</option>
-              <option value="1">One</option>
-            </select>
+              <button class="faqShopping_accordion">Q: When Will My Credit Cart Big Change ?</button>
+                <div class="faqShopping_panel">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+
+                <button class="faqShopping_accordion"> Q: When Can I Do If I Have An Issu With My Order ?</button>
+                <div class="faqShopping_panel">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+
+                <button class="faqShopping_accordion">Q: What Payment Method Do You Accept?</button>
+                <div class="faqShopping_panel">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
           </div>
           <div class="faqShopping mt-4">
             <h4 class="py-4">Payment</h4>
-            <select
-              class="form-select form-select-lg mb-4 select_qestion"
-              aria-label=".form-select-lg example"
-            >
-              <option selected>Q: When Will My Credit Cart Big Change ?</option>
-              <option value="1">One</option>
-            </select>
-            <select
-              class="form-select form-select-lg mb-4 select_qestion"
-              aria-label=".form-select-lg example"
-            >
-              <option selected>
-                Q: When Can I Do If I Have An Issu With My Order ?
-              </option>
-              <option value="1">One</option>
-            </select>
-            <select
-              class="form-select form-select-lg mb-4 select_qestion"
-              aria-label=".form-select-lg example"
-            >
-              <option selected>Q: What Payment Method Do You Accept?</option>
-              <option value="1">One</option>
-            </select>
+            <button class="faqShopping_accordion">Q: When Will My Credit Cart Big Change ?</button>
+            <div class="faqShopping_panel">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+
+            <button class="faqShopping_accordion"> Q: When Can I Do If I Have An Issu With My Order ?</button>
+            <div class="faqShopping_panel">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+
+            <button class="faqShopping_accordion">Q: What Payment Method Do You Accept?</button>
+            <div class="faqShopping_panel">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
           </div>
         </div>
+        <!-- ------------ for according js code-------------- -->
+          <script>
+            var acc = document.getElementsByClassName("faqShopping_accordion");
+            var i;
+
+            for (i = 0; i < acc.length; i++) {
+              acc[i].addEventListener("click", function() {
+                this.classList.toggle("faqShopping_active");
+                var faqShopping_panel = this.nextElementSibling;
+                if (faqShopping_panel.style.maxHeight) {
+                  faqShopping_panel.style.maxHeight = null;
+                } else {
+                  faqShopping_panel.style.maxHeight = faqShopping_panel.scrollHeight + "px";
+                } 
+              });
+            }
+        </script>
+        <!-- -------------- for according js code-------------- -->
+
       </div>
     </section>
 
