--- a/blog-details.html
+++ b/blog-details.html
@@ -321,7 +321,7 @@
                         <div class="blog_popular_post mt-4">
                             <div class="">
                                 <h4>Popular Post</h4>
-                                <div class="blog_popular_content d-flex">
+                                <div class="blog_popular_content">
                                     <a href="assets/img/blog/lemon-juice.jpg" data-lightbox="mygallery"
                                         data-title="Caption-4"> <img src="assets/img/blog/lemon-juice.jpg" alt=""></a>
                                     <span>
@@ -329,7 +329,7 @@
                                         <h5>Nulla Laoreet sceleres habitant massea eget susciopit</h5>
                                     </span>
                                 </div>
-                                <div class="blog_popular_content d-flex">
+                                <div class="blog_popular_content">
                                     <a href="assets/img/blog/4.jpg" data-lightbox="mygallery" data-title="Caption-4">
                                         <img src="assets/img/blog/4.jpg" alt=""></a>
                                     <span>
@@ -337,7 +337,7 @@
                                         <h5>Commodo auctor an iaculis commodo pulviner</h5>
                                     </span>
                                 </div>
-                                <div class="blog_popular_content d-flex">
+                                <div class="blog_popular_content">
                                     <a href="assets/img/blog/5.jpg" data-lightbox="mygallery" data-title="Caption-4">
                                         <img src="assets/img/blog/5.jpg" alt=""></a>
                                     <span>
@@ -345,7 +345,7 @@
                                         <h5>Sociis Potineti commo nostra magnic inceptos diam</h5>
                                     </span>
                                 </div>
-                                <div class="blog_popular_content d-flex">
+                                <div class="blog_popular_content">
                                     <a href="assets/img/blog/7.jpg" data-lightbox="mygallery" data-title="Caption-4">
                                         <img src="assets/img/blog/7.jpg" alt=""></a>
                                     <span>
