--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -103,7 +103,7 @@
                                 BLOG
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="blog-details.html">Blog </a></li>
+                                <li><a class="dropdown-item" href="blog.html">Blog </a></li>
                                 <li><a class="dropdown-item" href="blog-details.html">Blog Details</a></li>
                                 <li><a class="dropdown-item" href="#">Blog 3</a></li>
                             </ul>
