--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 PRODUCTS
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <ul class="dropdown-menu sub_menu_hover" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="product_details.html">Product Details</a></li>
                                 <li><a class="dropdown-item" href="#">Page 2</a></li>
                                 <li><a class="dropdown-item" href="#">Page 3</a></li>
@@ -78,7 +78,7 @@
                                   data-bs-toggle="dropdown" aria-expanded="false">
                                   PAGE
                               </a>
-                              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                              <ul class="dropdown-menu sub_menu_hover" aria-labelledby="navbarDropdownMenuLink">
                                   <li><a class="dropdown-item" href="#">Page 1</a></li>
                                   <li><a class="dropdown-item" href="#">Page 2</a></li>
                                   <li><a class="dropdown-item" href="#">Page 3</a></li>
@@ -89,7 +89,7 @@
                                   data-bs-toggle="dropdown" aria-expanded="false">
                                   BLOG
                               </a>
-                              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                              <ul class="dropdown-menu sub_menu_hover" aria-labelledby="navbarDropdownMenuLink">
                                   <li><a class="dropdown-item" href="blog.html">Blog </a></li>
                                   <li><a class="dropdown-item" href="blog-details.html">Blog Details</a></li>
                                   <li><a class="dropdown-item" href="#">Blog 3</a></li>
