--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 PRODUCTS
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <ul class="dropdown-menu sub_menu_hover" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="product_details.html">Product Details</a></li>
                                 <li><a class="dropdown-item" href="#">Page 2</a></li>
                                 <li><a class="dropdown-item" href="#">Page 3</a></li>
@@ -80,7 +80,7 @@
                                   data-bs-toggle="dropdown" aria-expanded="false">
                                   PAGE
                               </a>
-                              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                              <ul class="dropdown-menu sub_menu_hover" aria-labelledby="navbarDropdownMenuLink">
                                   <li><a class="dropdown-item" href="#">Page 1</a></li>
                                   <li><a class="dropdown-item" href="#">Page 2</a></li>
                                   <li><a class="dropdown-item" href="#">Page 3</a></li>
@@ -91,7 +91,7 @@
                                   data-bs-toggle="dropdown" aria-expanded="false">
                                   BLOG
                               </a>
-                              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                              <ul class="dropdown-menu sub_menu_hover" aria-labelledby="navbarDropdownMenuLink">
                                   <li><a class="dropdown-item" href="blog.html">Blog</a></li>
                                   <li><a class="dropdown-item" href="blog-details.html">Blog Details </a></li>
                                   <li><a class="dropdown-item" href="#">Blog 3</a></li>
