--- a/product_details.html
+++ b/product_details.html
@@ -68,7 +68,7 @@
                               data-bs-toggle="dropdown" aria-expanded="false">
                               PRODUCTS
                           </a>
-                          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <ul class="dropdown-menu sub_menu_hover" aria-labelledby="navbarDropdownMenuLink">
                               <li><a class="dropdown-item" href="product_details.html">Product Details</a></li>
                               <li><a class="dropdown-item" href="#">Page 2</a></li>
                               <li><a class="dropdown-item" href="#">Page 3</a></li>
@@ -88,7 +88,7 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 PAGE
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <ul class="dropdown-menu sub_menu_hover" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="#">Page 1</a></li>
                                 <li><a class="dropdown-item" href="#">Page 2</a></li>
                                 <li><a class="dropdown-item" href="#">Page 3</a></li>
@@ -99,7 +99,7 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 BLOG
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <ul class="dropdown-menu sub_menu_hover" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="blog.html">Blog </a></li>
                                 <li><a class="dropdown-item" href="blog-details.html">Blog Details</a></li>
                                 <li><a class="dropdown-item" href="#">Blog 3</a></li>
