--- a/compare.html
+++ b/compare.html
@@ -80,7 +80,7 @@
                               PAGE
                           </a>
                           <ul class="dropdown-menu sub_menu_hover" aria-labelledby="navbarDropdownMenuLink">
-                              <li><a class="dropdown-item" href="#">Page 1</a></li>
+                              <li><a class="dropdown-item" href="compare.html">Compare</a></li>
                               <li><a class="dropdown-item" href="#">Page 2</a></li>
                               <li><a class="dropdown-item" href="#">Page 3</a></li>
                           </ul>
@@ -97,7 +97,7 @@
                           </ul>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link text-white" href="#">MEGAMENU</a>
+                          <a class="nav-link text-white" href="contact.html">CONTACT</a>
                       </li>
                   </ul>
                  
@@ -312,8 +312,6 @@
         <!-- --------- for Mobile Device End------------- -->
 
     </section>
-
-
 
    <!-- -------------------------------------------- -->
     
