--- a/product_details.html
+++ b/product_details.html
@@ -129,7 +129,9 @@
                     class="dropdown-menu sub_menu_hover"
                     aria-labelledby="navbarDropdownMenuLink"
                   >
-                    <li><a class="dropdown-item" href="#">Page 1</a></li>
+                    <li>
+                      <a class="dropdown-item" href="compare.html">Compare</a>
+                    </li>
                     <li><a class="dropdown-item" href="#">Page 2</a></li>
                     <li><a class="dropdown-item" href="#">Page 3</a></li>
                   </ul>
@@ -159,7 +161,7 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">MEGAMENU</a>
+                  <a class="nav-link text-white" href="contact.html">CONTACT</a>
                 </li>
               </ul>
             </div>
