--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -92,7 +92,7 @@
                                 PAGE
                             </a>
                             <ul class="dropdown-menu sub_menu_hover" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Page 1</a></li>
+                                <li><a class="dropdown-item" href="compare.html">Compare</a></li>
                                 <li><a class="dropdown-item" href="#">Page 2</a></li>
                                 <li><a class="dropdown-item" href="#">Page 3</a></li>
                             </ul>
@@ -109,7 +109,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">MEGAMENU</a>
+                            <a class="nav-link text-white" href="contact.html">CONTACT</a>
                         </li>
                     </ul>
                    
