--- a/product_details.html
+++ b/product_details.html
@@ -316,7 +316,7 @@
                           />
                         </div>
                       </div>
-                      <div class="carousel-item">
+                      <!-- <div class="carousel-item">
                         <div class="detailsMainImg">
                           <img
                             id="mainImage"
@@ -333,7 +333,7 @@
                             alt="image"
                           />
                         </div>
-                      </div>
+                      </div> -->
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
